hphp/hack/test/typecheck/coeffects/local/globals_static_property.php.exp
File "globals_static_property.php", line 12, characters 20-21:
Static property access requires the capability AccessStaticVariable, which is not provided by the context. (Typing[4401])
  File "globals_static_property.php", line 11, characters 30-31:
  The local (enclosing) context provides the capability set {}
File "globals_static_property.php", line 17, characters 31-32:
Static property access requires the capability AccessStaticVariable, which is not provided by the context. (Typing[4401])
  File "globals_static_property.php", line 17, characters 21-22:
  The local (enclosing) context provides the capability set {}
File "globals_static_property.php", line 23, characters 13-14:
Static property access requires the capability AccessStaticVariable, which is not provided by the context. (Typing[4401])
  File "globals_static_property.php", line 21, characters 20-28:
  The local (enclosing) context provides the capability NonDet
